--- a/console/src/main/webapp/ConsoleModule.html
+++ b/console/src/main/webapp/ConsoleModule.html
@@ -3,11 +3,11 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <link type="text/css" rel="stylesheet" href="ConsoleModule.css">
-    <title>SAVARA web console</title>
+    <title>SAVARA Console</title>
     <script type="text/javascript" language="javascript" src="ConsoleModule/ConsoleModule.nocache.js"></script>
   </head>
 
-  <body topmargin="0">
+  <body>
     <!-- OPTIONAL: include this if you want history support -->
     <iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' style="position:absolute;width:0;height:0;border:0"></iframe>
 
